[gd_scene load_steps=15 format=3 uid="uid://b2en35wgf36dm"]

[ext_resource type="Script" path="res://Scenes/Componentes/Conselheiro.gd" id="1_qko8e"]
[ext_resource type="Texture2D" uid="uid://de3laniybw073" path="res://Assets/Imagens/lurdes_neutro.png" id="2_xq3kg"]
[ext_resource type="LabelSettings" uid="uid://hypk0dqfvj8w" path="res://Scenes/Componentes/TextoBalaoSettings.tres" id="3_l1ns2"]
[ext_resource type="Texture2D" uid="uid://dkkg7r2ygm26t" path="res://Assets/Imagens/lurdes_sim.png" id="3_n8yps"]
[ext_resource type="Texture2D" uid="uid://bqh7skrugea8w" path="res://Assets/Imagens/lurdes_nao.png" id="4_820i1"]
[ext_resource type="Texture2D" uid="uid://cwrt5n1v708tu" path="res://Assets/Imagens/lurdes_proposta.svg" id="5_1f2ds"]
[ext_resource type="Texture2D" uid="uid://dfborj0um5c6e" path="res://Assets/Imagens/douces_cifra.svg" id="5_7u860"]

[sub_resource type="SpriteFrames" id="SpriteFrames_8jxtn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_xq3kg")
}, {
"duration": 1.0,
"texture": ExtResource("3_n8yps")
}, {
"duration": 1.0,
"texture": ExtResource("4_820i1")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltpsc"]
size = Vector2(900, 500)

[sub_resource type="Animation" id="Animation_abt0u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(300, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_v6x68"]
resource_name = "entrar"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(375, 0), Vector2(0, 0)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:x")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 3, 3, 3, 3, 0),
"points": PackedFloat32Array(375, 0, 0, 0.0305311, -71.5, -1.5, -0.02498, 188, 0.02498, -188, -3.5, -0.0263678, -92, 0.0263678, 92, 1.5, -0.0166534, 21, 0.0166534, -21, -0.5, -0.0166533, -13, 0.0166533, 13, 0, -0.138778, -3.5, 0.25, 0),
"times": PackedFloat32Array(0, 0.105471, 0.192901, 0.263678, 0.330291, 0.4996)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:position:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="Animation" id="Animation_wfe8c"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.5, 3, 0.5, -3, 0, -0.5, -3, 0.5, 3, 0, -0.5, 3, 0.5, -3),
"times": PackedFloat32Array(0, 1, 2)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(3, 0),
"points": PackedFloat32Array(0, -1, -0.1, 1, 0.1, 0, -1, 0, 1, 0),
"times": PackedFloat32Array(0, 2)
}

[sub_resource type="Animation" id="Animation_gkias"]
resource_name = "sair"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(375, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lcpse"]
_data = {
"RESET": SubResource("Animation_abt0u"),
"entrar": SubResource("Animation_v6x68"),
"idle": SubResource("Animation_wfe8c"),
"sair": SubResource("Animation_gkias")
}

[node name="Lourdes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qko8e")
ImagemBalao = "res://Assets/Imagens/lurdes_proposta.svg"
ImagemBalaoPressed = "res://Assets/Imagens/lurdes_proposta_pressed.svg"

[node name="Sprite" type="AnimatedSprite2D" parent="."]
position = Vector2(375, 0)
sprite_frames = SubResource("SpriteFrames_8jxtn")
speed_scale = 0.0

[node name="Balao" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -780.0
offset_top = -204.0
offset_right = -124.792
offset_bottom = 261.0
scale = Vector2(0.841044, 0.841044)
pivot_offset = Vector2(328, 212)
texture = ExtResource("5_1f2ds")
expand_mode = 3
stretch_mode = 4

[node name="Texto" type="Label" parent="Balao"]
layout_mode = 0
offset_left = 27.0
offset_top = 22.0
offset_right = 537.0
offset_bottom = 323.0
label_settings = ExtResource("3_l1ns2")
autowrap_mode = 3

[node name="Custo" type="Control" parent="Balao"]
anchors_preset = 0
offset_left = 44.0
offset_top = -71.0
offset_right = 266.0
offset_bottom = -8.0

[node name="Custo1" type="TextureRect" parent="Balao/Custo"]
visible = false
layout_mode = 2
offset_left = 5.0
offset_top = 1.0
offset_right = 34.0
offset_bottom = 68.0
texture = ExtResource("5_7u860")
expand_mode = 5
stretch_mode = 4

[node name="Custo2" type="TextureRect" parent="Balao/Custo"]
visible = false
layout_mode = 2
offset_left = 38.292
offset_top = 1.0
offset_right = 67.292
offset_bottom = 68.0
texture = ExtResource("5_7u860")
expand_mode = 5
stretch_mode = 4

[node name="Custo3" type="TextureRect" parent="Balao/Custo"]
visible = false
layout_mode = 2
offset_left = 71.5839
offset_top = 1.0
offset_right = 100.584
offset_bottom = 68.0
texture = ExtResource("5_7u860")
expand_mode = 5
stretch_mode = 4

[node name="Custo4" type="TextureRect" parent="Balao/Custo"]
visible = false
layout_mode = 2
offset_left = 104.876
offset_top = 1.0
offset_right = 133.876
offset_bottom = 68.0
texture = ExtResource("5_7u860")
expand_mode = 5
stretch_mode = 4

[node name="Custo5" type="TextureRect" parent="Balao/Custo"]
visible = false
layout_mode = 2
offset_left = 138.168
offset_top = 1.0
offset_right = 167.168
offset_bottom = 68.0
texture = ExtResource("5_7u860")
expand_mode = 5
stretch_mode = 4

[node name="Botao" type="TouchScreenButton" parent="."]
position = Vector2(-309, 9)
scale = Vector2(0.966186, 0.805155)
shape = SubResource("RectangleShape2D_ltpsc")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
reset_on_save = false
root_node = NodePath("../Sprite")
libraries = {
"": SubResource("AnimationLibrary_lcpse")
}
speed_scale = 0.75
